# es-map

./: .gitignore  .prettierignore  LICENSE  Network_diagram.drawio  README.md  es-map.spec  example_network_diagram.drawio  flake.nix  pyproject.toml  todo.md
.github/workflows/: build-windows-exe.yml  build_win.yml  compile_windows.yml  test.yml
docs/: project_notes.md
docs/planning/: Planeringsschema.gan  Planeringsschema.mpx  example_network.txt
docs/thesis/: sources.txt
es_map/: cli.py  config.py  main.py
es_map/analysis/: ingest.py  models.py  network.py
es_map/elastic/: client.py
es_map/graph/: builder.py
es_map/utils/: logging.py
scripts/: ganconverter.py
src/es_map/: cli.py  config.py
src/es_map/analysis/: ingest.py  models.py  network.py
src/es_map/api/: app.py  server.py
src/es_map/elastic/: client.py  queries.py
src/es_map/graph/: builder.py  export.py  export_graph.py  models.py  renderer.py  web_renderer.py
src/es_map/graph/api/: export.py  models.py
src/es_map/graph/render/: web_renderer.py
src/es_map/graph/render/static/: api.js  config.js  graph.js  interactions.js  renderGraph.js  renderer.js  simulation.js  ui.js  utils.js
src/es_map/graph/render/static/interactions/: highlight.js  interactions.js  reset.js  selection.js
src/es_map/graph/render/static/styles/: components.css  graph.css  layout.css  main.css
src/es_map/graph/render/templates/: index.html
src/es_map/graph/static/: graph.js
src/es_map/graph/templates/: index.html
src/es_map/utils/: definitions.py  file_handling.py  logging.py  paths.py
