[project]
name = "es-map"
version = "0.1.0"
description = "Static analysis network graphing tool"
requires-python = ">=3.12"
dependencies = [
  "elasticsearch>=9.3.0",
  "fastjsonschema>=2.21.2",
  "hypernetx>=2.4.0",
  "networkx>=3.6.1",
  "python-dotenv>=1.2.2",
  "typer>=0.24.1",
]

[project.scripts]
es-map = "es_map.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
